--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,5 +31,4 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build and Test with Gradle
-        run: |
-          ./gradlew clean test
+        run: ./gradlew clean test
