--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,13 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    services:
+      docker:
+        image: docker:19.03.12
+        options: --privileged
+        ports:
+          - 2375:2375
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -27,8 +34,8 @@ jobs:
           distribution: 'adopt'
           java-version: '17'
 
-      - name: Make gradlew executable
+      - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
       - name: Build and Test with Gradle
-        run: ./gradlew clean test
+        run: ./gradlew test
