--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         options: --privileged
         ports:
           - 2375:2375
-
+    
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -34,8 +34,9 @@ jobs:
           distribution: 'adopt'
           java-version: '17'
 
-      - name: Grant execute permission for gradlew
+      - name: Make gradlew executable
         run: chmod +x gradlew
 
       - name: Build and Test with Gradle
-        run: ./gradlew test
+        run: |
+          ./gradlew clean test
